--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   ],
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-delay-render": "^0.1.2",
+    "react-dom": "^16.13.1",
+    "react-imported-component": "^6.2.1",
+    "react-router-dom": "^5.2.0"
   }
 }
