--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.development.js",
+    "start": "webpack-dev-server --env.env=dev",
     "prebuild": "rimraf dist",
-    "build": "webpack --config webpack.config.production.js"
+    "build": "webpack --env.env=prod"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "@hot-loader/react-dom": "^16.13.0",
     "autoprefixer": "^9.8.1",
     "babel-loader": "^8.1.0",
+    "chalk": "^4.1.0",
     "css-loader": "^3.6.0",
     "cssnano": "^4.1.10",
     "html-webpack-plugin": "^4.3.0",
@@ -32,7 +33,8 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "browserslist": [
     "last 2 versions"
